--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
