--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "less-loader": "^10.0.1",
     "loader-utils": "^2.0.0",
     "mini-css-extract-plugin": "^2.2.1",
+    "postcss-loader": "^6.1.1",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
     "simple-progress-webpack-plugin": "^2.0.0",
     "style-loader": "^3.2.1",
@@ -59,5 +61,11 @@
         }
       ]
     ]
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie < 11",
+    "last 2 versions",
+    "> 1%"
+  ]
 }
