--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "editor.formatOnSave": false, // 使用prettier来格式化文件
+  "editor.formatOnSave": true, // 使用prettier来格式化文件
   "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true // 保存时使用eslint校验文件
     }
