--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "less-loader": "^10.0.1",
     "loader-utils": "^2.0.0",
     "mini-css-extract-plugin": "^2.2.1",
+    "mobx": "^6.3.5",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
@@ -43,6 +44,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
+    "mobx-react": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
