--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/parser": "^5.3.0",
+    "axios": "^0.26.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
@@ -35,6 +36,7 @@
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
+    "qs": "^6.10.3",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "webpack": "^5.51.1",
